# CI-HIL-test

./: nrf52dk_nrf52832_CycollectorV2I4.dts  pm_static.yml  prj.conf  pyScript.txt  west.yml
.github/workflows/: manual.yml
child_image/mcuboot/: prj.conf
cylock/: CMakeLists.txt
cylock/boards/: nrf52dk_nrf52832.overlay
cylock/child_image/mcuboot/: nrf52840dk_nrf52840.overlay
cylock/src/: AES_CTR.c  BG95_WIFI_CONFIG.h  BLE_mgr.h  ESP_WROOM_02.h  FlashSPI.c  GPS.c  MQTT_Queue.c  NRF_SM.c  PIN_CTRL.c  PIN_CTRL.h  WDT.h  battery_mgr.c  bg95.c  lock.c  thuraya.c  timer.c  timer.h
cylock/tests/base/: prj.conf
cylock/tests/base/src/: main.c
cylock/tests/base2/: CMakeLists.txt  prj.conf
cylock/tests/base2/src/: main.c
src/: BLE_mgr.c  Com_State_Machine.c  Com_State_Machine.h  Comm_Mgr.c  Comm_Mgr.h  ESP_WROOM_02.c  FlashSPI.h  MQTT_Queue.h  NRF_SM.h  StateMachines_Config.h  WDT.c  battery_mgr.h  bg95.h  lock.h  main.c  thuraya.h
tests/base/: CMakeLists.txt
